syntax = "proto3";

package test;

option java_package = "io.confluent.events.test";
option java_multiple_files = true;

import "google/protobuf/struct.proto";

message SomeMessage {
    string principal = 1;
}
